tests/ui/type-alias-impl-trait/constrain_in_projection.current.stderr
error[E0277]: the trait bound `Foo: Trait<Bar>` is not satisfied
  --> $DIR/constrain_in_projection.rs:25:14
   |
LL |     let x = <Foo as Trait<Bar>>::Assoc::default();
   |              ^^^ unsatisfied trait bound
   |
   = help: the trait `Trait<Bar>` is not implemented for `Foo`
           but trait `Trait<()>` is implemented for it

error[E0277]: the trait bound `Foo: Trait<Bar>` is not satisfied
  --> $DIR/constrain_in_projection.rs:25:13
   |
LL |     let x = <Foo as Trait<Bar>>::Assoc::default();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `Trait<Bar>` is not implemented for `Foo`
           but trait `Trait<()>` is implemented for it

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
